--- a/index.html
+++ b/index.html
@@ -6,17 +6,26 @@
         <title> Document </title>
     </head>
 <body class="bgc">
+<h1 class="title">Album Cover Generator</h1>
+<div class="container">
     <div class="card">
-    <h1 class="header">header</h1>
-    <h2 class="header2">Test</h2>
-    <ul>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-    </ul>
-    <button class="btn">Click me</button>
+        <h2 class="card-header"> SKotN </h2>
+        <img class="card-img" src="am.webp" alt="skotn" />
+        <h3 class="card-author"> $  34.99 </h3>
+</div>
 </div>
 <form action="" class="form">
+    <label> Name of Artist? </label>
+    <input type="text" />
+    <button type="submit">Submit</button>
+</form>
+<form action="" class="form">
+    <label> Name of Album? </label>
+    <input type="text" />
+    <button type="submit">Submit</button>
+</form>
+<form action="" class="form">
+    <label> Album image URL? </label>
     <input type="text" />
     <button type="submit">Submit</button>
 </form>
