--- a/index.html
+++ b/index.html
@@ -7,28 +7,21 @@
     </head>
 <body class="bgc">
 <h1 class="title">Album Cover Generator</h1>
-<div class="container">
-    <div class="card">
-        <h2 class="card-header"> SKotN </h2>
-        <img class="card-img" src="am.webp" alt="skotn" />
-        <h3 class="card-author"> $  34.99 </h3>
-</div>
 </div>
 <form action="" class="form">
-    <label> Name of Artist? </label>
-    <input type="text" />
-    <button type="submit">Submit</button>
-</form>
-<form action="" class="form">
+<!--     <label> Name of Artist? </label>
+    <input type="text" class="artist1"/>
+
     <label> Name of Album? </label>
-    <input type="text" />
-    <button type="submit">Submit</button>
-</form>
-<form action="" class="form">
+    <input type="text" /> -->
+
     <label> Album image URL? </label>
-    <input type="text" />
+    <input type="text" class="artist1"/>
     <button type="submit">Submit</button>
 </form>
+<div class="container">
+   <!--- <div class="card"> <h2 class="card-header"> Text </h2></div> -->
+</div>
 <script src="index.js"></script>
 </body>
 </html>
