--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <h1 class="title">Album Cover Generator</h1>
 </div>
 <form action="" class="form">
-<!--     <label> Name of Artist? </label>
-    <input type="text" class="artist1"/>
+     <label> Name of Artist? </label>
+    <input type="text" class="artist"/>
 
     <label> Name of Album? </label>
-    <input type="text" /> -->
+    <input type="text" class="album"/>
 
     <label> Album image URL? </label>
-    <input type="text" class="artist1"/>
-    <button type="submit">Submit</button>
+    <input type="text" class="link"/>
+    <button type="submit">Submit</button> 
 </form>
 <div class="container">
    <!--- <div class="card"> <h2 class="card-header"> Text </h2></div> -->
