--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
      <label> Name of Artist? </label>
     <input type="text" class="artist"/>
 
+    <label> Album image URL? </label>
+    <input type="text" class="img"/>
+
+    
     <label> Name of Album? </label>
     <input type="text" class="album"/>
-
-    <label> Album image URL? </label>
-    <input type="text" class="link"/>
     <button type="submit">Submit</button> 
+
 </form>
 <div class="container">
    <!--- <div class="card"> <h2 class="card-header"> Text </h2></div> -->
