--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width,device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="style.css">
-        <title> Document </title>
+        <title> My Albums </title>
     </head>
 <body class="bgc">
-<h1 class="title">Album Cover Generator</h1>
+<h1 class="title">Album Generator</h1>
 </div>
 <form action="" class="form">
      <label> Name of Artist? </label>
@@ -18,7 +18,10 @@
     
     <label> Name of Album? </label>
     <input type="text" class="album"/>
+     
+    <div>
     <button type="submit">Submit</button> 
+    </div>
 
 </form>
 <div class="container">
